<resources>

    <!-- GLOBAL -->
    <string name="vehicle_id">vehicleId</string>
    <string name="vehicle_lat">vehicleLat</string>
    <string name="vehicle_lng">vehicleLng</string>

    <string name="app_name">Ride</string>
    <string name="splash_title">Ride. Park. Go.</string>
    <string name="splash_sub_title">Just book your bike and enjoy your ride</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Please sign in to your account</string>
    <string name="generate_otp">Generate Otp</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="permissionDenied">Permission denied</string>
    <!--    <string name="map_key">AIzaSyDn69x47jU1dUdN_P7FmDmX2B_Jpf3gItY</string>-->
    <string name="map_key">AIzaSyBN0Q6MskTz8PqQBAJCF-3ERIzClFFKYZA</string>
    <string name="privacy">By continuing, you accept our </string>
    <string name="policy">Privacy Policy</string>
    <string name="terms">and Terms and use.</string>
    <string name="available_scotters">Available Bikes</string>
    <string name="title_activity_maps">Map</string>
    <string name="rs">\u20B9</string>

    <!--Bottom navigation -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>

    <string name="text_selected">Selected</string>
    <string name="text_empty" />
    <string name="start_ride">Start Ride</string>
    <string name="text_proceed_to_pay">Proceed to pay</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="near_by_bp_s">Near by BP\'s</string>

    <string name="text_price_is">Price ₹%1$.0f</string>
    <string name="text_duration_is">Duration \n₹%1$s</string>
    <string name="book_now">Book Now</string>

</resources>