<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ride.home.booking.ride.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_homeFragment_to_plansFragment"
            app:destination="@+id/plansFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            />
    </fragment>


    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ride.home.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_history" />


    <fragment
        android:id="@+id/navigation_order"
        android:name="com.ride.home.ui.history.HistoryFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ride.home.ui.profile.ProfileFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/plansFragment"
        android:name="com.ride.home.booking.PlansFragment"
        android:label="Plans"
        tools:layout="@layout/fragment_plans"
        >
        <action android:id="@+id/action_planFragment_to_paymentFragment"
            app:destination="@+id/paymentFragment" >

            <argument
                android:name="planId"
                app:argType="integer"
                android:defaultValue="0"
                />

            <argument
                android:name="planName"
                app:argType="string"
                android:defaultValue="Plan"
                />

            <argument
                android:name="amount"
                app:argType="float"
                android:defaultValue="0.0"
                />

        </action>

    </fragment>

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.ride.payment.PaymentFragment"
        android:label="Payment Options"
        tools:layout="@layout/fragment_payment"
        >
        <action
            android:id="@+id/action_paymentFragment_to_startRideFragment"
            app:destination="@+id/startRideFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false"
            />
    </fragment>

    <fragment
        android:id="@+id/startRideFragment"
        android:name="com.ride.home.booking.ride.StartRideFragment"
        android:label="@string/start_ride"
        tools:layout="@layout/fragment_ride_start" >

    </fragment>

</navigation>