<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/main_container"
    tools:context=".GetStartedActivity">

    <ProgressBar android:id="@+id/loading_spinner"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="TODO" />

            <TextView
                style="@style/text_white_extra_llarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/welcome"

                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                style="@style/text_white_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"

                android:text="@string/signin"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/text_white_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white"
                android:digits="0123456789"
                android:hint="Enter Mobile Number"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/etEnterOtp"
                style="@style/text_white_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:digits="0123456789"
                android:visibility="invisible"
                android:hint="Enter Otp"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/grey" />

            <TextView
                android:id="@+id/tvResendOtp"
                style="@style/text_white_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/resend_otp"/>


            <TextView
                android:id="@+id/btnGenerateOtp"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_rounded_inactive"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/generate_otp"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <TextView
            style="@style/text_grey_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/privacy"
            android:textColor="@color/grey"/>

        <TextView
            style="@style/text_grey_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/policy"
            android:textColor="@color/red"/>

        <TextView
            style="@style/text_grey_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/terms"
            android:textColor="@color/grey"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>