<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:id="@+id/main_container"
    >

    <ProgressBar android:id="@+id/loadingSpinner"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        android:layout_marginTop="50dp"
        style="@style/text_white_extra_llarge"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvMessagePleaseSign"
        style="@style/text_white_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_medium"
        android:text="@string/signin"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/etPhoneNumber"
        style="@style/text_white_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:digits="0123456789"
        app:layout_constraintTop_toBottomOf="@+id/tvMessagePleaseSign"
        android:hint="Enter Mobile Number"
        android:inputType="number"
        android:maxLength="10"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/etEnterOtp"
        style="@style/text_white_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:digits="0123456789"
        android:visibility="invisible"
        android:hint="Enter Otp"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"
        android:inputType="number"
        android:maxLength="10"
        android:textColorHint="@color/grey" />

    <TextView
        android:id="@+id/tvResendOtp"
        style="@style/text_white_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEnterOtp"
        android:background="@drawable/selector_rectangle"
        android:text="@string/resend_otp"/>


    <TextView
        android:id="@+id/btnGenerateOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvResendOtp"
        android:background="@drawable/button_rounded_inactive"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/generate_otp"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/privacyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <TextView
            style="@style/text_grey_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/privacy"
            android:textColor="@color/grey"/>

        <TextView
            style="@style/text_grey_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/policy"
            android:textColor="@color/red"/>

        <TextView
            style="@style/text_grey_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/terms"
            android:textColor="@color/grey"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>